--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "graphql": "^16.10.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "next": "15.1.5",
+    "next": "^15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^22.13.8",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   }
 }
